# gwlearn

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  api.html  bandwidth_search.html  elections.html  ensemble.html  genindex.html  gwm_prototype.html  imbalance.html  index.html  introduction.html  linear.html  mgwr_comparison.html  network_graph.html  objects.inv  predict.html  pyproject.toml  references.html  search.html  searchindex.js  sitemap.xml  sklearn_compatibility.html  update_version_json.py  versions.json
.github/: copilot-instructions.md  release.yml
.github/workflows/: build_docs.yml  build_docs_pr.yml  release.yml  testing.yml  typing.yml
_modules/: index.html
_modules/gwlearn/: base.html  ensemble.html  linear_model.html  search.html
_sources/: api.rst  bandwidth_search.ipynb.txt  elections.ipynb  ensemble.ipynb.txt  gwm_prototype.ipynb  imbalance.ipynb.txt  index.md.txt  mgwr_comparison.ipynb  network_graph.ipynb  predict.ipynb.txt  sklearn_compatibility.ipynb.txt
_static/: documentation_options.js
ci/: py311_latest.yaml  py311_oldest.yaml  py312_latest.yaml  py312_oldest.yaml  py313_dev.yaml  py313_latest.yaml  py313_min.yaml  py314_dev.yaml  py314_latest.yaml
dev/: .buildinfo  api.html  bandwidth_search.html  contributing.html  ensemble.html  genindex.html  imbalance.html  index.html  installation.html  introduction.html  linear.html  mgwr_comparison.html  network_graph.html  objects.inv  predict.html  references.html  searchindex.js  sklearn_compatibility.html
dev/_modules/: index.html
dev/_modules/gwlearn/: base.html  ensemble.html  linear_model.html  search.html
dev/_sources/: api.rst.txt  ensemble.ipynb.txt  imbalance.ipynb.txt  mgwr_comparison.ipynb.txt
dev/_static/: documentation_options.js
doc/: gwm_prototype.ipynb
docs/: environment.yaml  update_version_json.py
docs/source/: api.rst  conf.py  czech_data.ipynb  elections.ipynb  ensemble.ipynb  estimator_check.ipynb  gw_linear_regression_example.ipynb  gw_logistic_regression_example.ipynb  gwlearn_mgwr_comparison.ipynb  gwm_prototype.ipynb  imbalance.ipynb  index.md  introduction.ipynb  linear.ipynb  mgwr_comparison.ipynb  network_graph.ipynb  predict.ipynb  search.ipynb
docs/source/_templates/autosummary/: class.rst
gh-pages/: api.html  genindex.html  gwm_prototype.html  index.html  mgwr_comparison.html  objects.inv  search.html  searchindex.js
gh-pages/_modules/: index.html
gh-pages/_modules/gwlearn/: base.html  ensemble.html  linear_model.html  search.html
gh-pages/_static/: documentation_options.js
gwlearn/: __init__.py  base.py  ensemble.py  gwpca.py  kdtree.py  linear_model.py  quadtree.py  search.py  undersample.py
gwlearn/examples/: gwpca_demo.py  gwpca_visual_demo.py
gwlearn/experiments/: gwpca_validation.py
gwlearn/tests/: test_base.py  test_ensemble.py  test_gwpca.py  test_linear_model.py  test_search.py  test_search_invariant.py
latest/: .buildinfo  api.html  bandwidth_search.html  ensemble.html  genindex.html  imbalance.html  index.html  introduction.html  linear.html  mgwr_comparison.html  network_graph.html  objects.inv  predict.html  references.html  searchindex.js  sitemap.xml  sklearn_compatibility.html
latest/_modules/: index.html
latest/_modules/gwlearn/: base.html  ensemble.html  linear_model.html  search.html
latest/_sources/: bandwidth_search.ipynb.txt  predict.ipynb.txt
latest/_static/: documentation_options.js
stable/: .buildinfo  api.html  contributing.html  ensemble.html  genindex.html  imbalance.html  index.html  introduction.html  linear.html  mgwr_comparison.html  network_graph.html  objects.inv  predict.html  searchindex.js  sitemap.xml  sklearn_compatibility.html
stable/_sources/: ensemble.ipynb.txt  introduction.ipynb.txt
v0.0.1/: api.html  imbalance.html  index.html  introduction.html  linear.html  objects.inv  predict.html
v0.0.1/_modules/: index.html
v0.0.1/_modules/gwlearn/: linear_model.html  search.html
v0.0.2/: introduction.html  linear.html
v0.0.2/_modules/gwlearn/: ensemble.html  linear_model.html
v0.0.2/_sources/: api.rst.txt  ensemble.ipynb.txt  introduction.ipynb.txt
v0.0.3/: ensemble.html  objects.inv  references.html
v0.0.4/: .buildinfo  bandwidth_search.html  imbalance.html
v0.1.0/: .buildinfo  bandwidth_search.html  index.html  introduction.html  predict.html  references.html
v0.1.1/: .buildinfo  api.html  bandwidth_search.html  ensemble.html  genindex.html  imbalance.html  introduction.html  objects.inv  searchindex.js
v0.1.1/_sources/: bandwidth_search.ipynb.txt  installation.md.txt
v0.2.0/: api.html  bandwidth_search.html  genindex.html  imbalance.html  introduction.html  linear.html  mgwr_comparison.html  predict.html  sitemap.xml
v0.2.0/_sources/: api.rst.txt  bandwidth_search.ipynb.txt  ensemble.ipynb.txt  index.md.txt  installation.md.txt  linear.ipynb.txt  network_graph.ipynb.txt  sklearn_compatibility.ipynb.txt
