[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "gwlearn"
description = "Geographically weighted modeling based on scikit-learn."
dynamic = ["version"]
authors = [
   { name = "Martin Fleischmann", email = "martin@martinfleischmann.net" },
]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0.0",
    "joblib>=1.4.0",
    "libpysal>=4.12",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.1.0",
]

[project.urls]
Homepage = "https://pysal.org/gwlearn/"
Documentation = "https://pysal.org/gwlearn/"
Repository = "https://github.com/pysal/gwlearn.git"
Issues = "https://github.com/pysal/gwlearn/issues"
Changelog = "https://github.com/pysal/gwlearn/releases"

[tool.setuptools.packages.find]
include = ["gwlearn", "gwlearn.*"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
ignore = ["N803", "N806"] # name {} should be lowercase

[tool.ruff.lint.per-file-ignores]
 "*__init__.py" = [
     "F401",  # imported but unused
     "F403",  # star import; unable to detect undefined names
 ]
 "*.ipynb" = [
    "C408",  # Unnecessary `dict` call
    "E501",  # Line too long
    "F401",  # imported but unused
]

[tool.ty.rules]
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
unresolved-import = "ignore"

[tool.coverage.run]
source = ["./gwlearn"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["gwlearn/tests/*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
geopandas = ">=1.0.1"
libpysal = ">=4.12.1"
pandas = ">=2.2.3"
geodatasets = ">=2024.8.0"
scikit-learn = ">=1.6.1"
joblib = ">=1.4.2"
scipy = ">=1.15.2"
ipykernel = ">=6.29.5"
numpy = ">=2.2.4"
pytest = ">=8.3.5"
pytest-cov = ">=6.0.0"
pre-commit = ">=4.2.0"
numpydoc = ">=1.8.0"
myst-nb = ">=1.2.0"
sphinx-copybutton = ">=0.5.2"
sphinx-autosummary-accessors = ">=2025.3.1"
sphinx = ">=8.2.3"
sphinxcontrib-bibtex = ">=2.6.3"
sphinx-book-theme = ">=1.1.4"
ruff = ">=0.11.4"
mgwr = ">=2.2.1"
snakeviz = ">=2.2.2"
pyarrow = ">=20.0.0"
fsspec = ">=2025.5.1"
s3fs = ">=2025.5.1"
osmnx = ">=2.0.7"
furo = ">=2024.8.6"
pandarm = ">=0.0.3"
sphinx-immaterial = ">=0.13.8"
pytest-doctestplus = ">=1.6.0"
ty = ">=0.0.2"

[tool.pixi.pypi-dependencies]
gwlearn = { path = ".", editable = true }

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:The 'shapely.geos' module is deprecated*:DeprecationWarning",
    "ignore:This process \\(pid=\\d+\\) is multi-threaded*:DeprecationWarning",
    "ignore:divide by zero encountered in power:RuntimeWarning"
]